--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,12 @@
 machine:
   python:
     version:
-      3.4
+      3.4.3
 dependencies:
   pre:
     - pip3 install -qU --compile pip
   override:
-    - pip3 install -qU --compile pylint pytest pytest-cov pytest-mock
+    - pip3 install -qU --compile -r requirements.txt
   post:
     - python setup.py install
 test:
